# IoT

./: .gitattributes  .gitignore  CMakeCache.txt  Makefile  README.md  build_openocd.sh  clone_openocd.sh  clone_pico-sdk.sh  cmake_install.cmake  install.sh  makefile  picow-proj-schematic.fzz  run_server.sh  setup_network.sh  terminal.sh
TLS_client/: CMakeCache.txt  CMakeLists.txt  IoT.dis  IoT.uf2  Makefile  build.sh  cmake_install.cmake  flash.sh  main.c  tls_common.c  update.sh
TLS_client/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
TLS_client/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
TLS_client/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
TLS_client/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
TLS_client/pico-sdk/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/docs/: Makefile
TLS_client/pico-sdk/src/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/common/pico_stdlib/: Makefile
TLS_client/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
TLS_client/pico-sdk/tools/: Makefile
TLS_client/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
TLS_client/src/: client.c  client.h  client_instance.c
pico-sdk/: Makefile  (+1 more)
src/: gpio.c  (+5 more)
(+226 files in other folders)
